# orjson-benchmark

./: .gitignore  README.rst  pyproject.toml  tox.ini
.github/workflows/: benchmark.yml  check_for_updates.yml
doc/: intro.rst
doc/indent/: benchmark.rst
doc/latency/dumps/: benchmark.rst
doc/latency/empty/: benchmark.rst
doc/latency/loads/: benchmark.rst
doc/memory/: benchmark.rst
doc/performance/: performance.rst
doc/performance/latency/: benchmark.rst
doc/performance/memory/: benchmark.rst
doc/sort/: benchmark.rst
doc/sorting/: benchmark.rst
doc/types/dataclass/: benchmark.rst
doc/types/numpy/: benchmark.rst  benchmark_bool.rst  benchmark_float64.rst  benchmark_int32.rst  benchmark_int8.rst  benchmark_uint8.rst
orjson_benchmark/: benchmark_dataclass.py  benchmark_dumps.py  benchmark_empty.py  benchmark_indent.py  benchmark_latency.py  benchmark_loads.py  benchmark_memory.py  benchmark_numpy.py  benchmark_sorting.py  check_latest_releases.py  data.py  graph.py  json_libraries.py  pydataclass.py  pyindent.py  pymem.py  pynumpy.py  pysort.py  util.py
tests/: test_orjson_benchmark.py
