[tool.poetry]
name = "orjson-benchmark"
version = "0.1.0"
description = "Benchmarking common JSON libraries for Python"
authors = ["Dennis Fuchs <aaa@aaa.aaa>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
pytest-random-order = "^1.0.4"
tox = "^3.24.5"
tabulate = "^0.8.9"
isort = "^5.10.1"
autoflake = "^1.4"
black = "^22.1.0"
orjson = "^3.6.7"
python-rapidjson = "^1.6"
simplejson = "^3.17.6"
ujson = "^5.1.0"
psutil = "^5.9.0"
numpy = "^1.22.2"

[tool.poetry.scripts]
setup-docs = "orjson_benchmark.util:create_doc_folders"
graph-tabulate = "orjson_benchmark.graph:tab"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
